# tpm-cpp

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: build-windows.yml  build.yml
include/tpm-cpp/: tpm-c.h  tpm.hpp
src/: tpm-c.cpp  tpm.cpp
